Fix footer menu icon spacing

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -193,7 +193,7 @@
                     height: 24px;
                     overflow: hidden;
                     display: inline-block;
-                    margin-left: 41px;
+                    margin-left: 48px;
                     margin-top: 3px;
                     opacity: 0.4;
 
@@ -225,7 +225,7 @@
                     a {
                         background-image: url(/img/icon-github.svg);
                         background-size: 20px;
-                        margin-left: 32px;
+                        margin-left: 37px;
 
                         @include small {
                             margin-left: 0;
